--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -34,32 +34,57 @@
       'Berne, Eric', 'Berra, Yogi', 'Berry, Wendell', 'Bevan, Aneurin', 'Ben-Gurion, David', 'Bevel, Ken', 'Biden, Joseph', 'Bennington, Chester', 'Bierce, Ambrose',
       'Billings, Josh', 'Birrell, Augustine', 'Blair, Tony', 'Beecher, Henry', 'Biondo, Frank'
     ];
-    
+
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
-
+    const collection1 = investors.filter(inventor => (inventor.year >= 1500 && inventor.year < 1600));
+    console.table(collection1);
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
-
+    const collection2 = inventors.map(inventor => `${inventor.first} ${inventor.last}`);
+    console.table(collection2)
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
-
+    const collection3 = inventors.sort((a,b) => a.year > b.year ? 1 : -1);
+    console.table(collection3);
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
-
+    const collection4 = inventors.reduce((total, inventor) => {
+      return total + (inventor.passed - inventor.year);
+    },0);
     // 5. Sort the inventors by years lived
+    const oldest = inventors.sort(function(a,b) {
+      const lastGuy = (a.passed - a.year);
+      const nextGuy = (b.passed - b.year);
+      return lastGuy > nextGuy ? -1 : 1;
+    })
 
+    console.table(oldest)
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
 
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
-
+    const collection5 = people.sort((a, b) => {
+      const [aLast, aFirst] = a.split(', ');
+      const [bLast, bFirst] = b.split(', ');
+      return aLast > bLast ? 1 : -1;
+    });
+    console.table(collection5);
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
 
+    const collection6 = data.reduce(function(obj, item) {
+      if (!obj[item]) {
+        obj[item] = 0;
+      }
+      obj[item]++;
+      return obj;
+    }, {});
+
+    console.table(collection6);
   </script>
 </body>
 </html>
